# cpp_constructs

./: .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
doc/: CMake_Unit_Test.md  DEMO.md  Elastic_search.md  Software_Engineering.md  permutation_gRPC.md  rest_localhost.md  storage.md
doc/Config_map_n_autoscaling/: lab-instructions (9).md
include/: combinations.hpp
include/complex/: complex.hpp
include/database/: sqlite_db.hpp
include/elasticsearch/: es_client.hpp
include/linear_search/: linear_search.hpp
include/singleton/: singleton.hpp
protobuffs/: CMakeLists.txt  lcm.proto  permutation.proto
src/: CMakeLists.txt  gicv3_irq_example.c  le-be_test.cpp  linear_search.cpp  link.ld  singleton.cpp
src/database/: sqlite_db.cpp
src/elasticsearch/: CMakeLists.txt  es_client.cpp
test/: CMakeLists.txt  rest_impl.cpp  test_cpp.cpp  test_search.cpp  test_singleton.cpp
test/Cassandra/: README.md  demo.py  docker-compose.yml  schema.cql
test/LCM/: lcm_client.cpp  lcm_server.cpp
test/database/: database_setup.cpp  database_test.cpp
test/es/: CMakeLists.txt  database_test.cpp
test/gRPC/: client.cpp  server.cpp
test/rest_api/: rest_api_demo.cpp  test_rest_api.cpp
